ajpf/src/main/java/oopl/parser/OOPLParser.java
// $ANTLR 3.4 /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g 2012-11-13 16:46:53

package oopl.parser;

import ail.syntax.ast.*;
import ail.mas.*;
import goal.syntax.ast.*;
import random.syntax.ast.*;
import oopl.syntax.ast.*;
import java.util.HashMap;


import mcaplantlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class OOPLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTIONS", "ADOPT", "AND", "BELIEVE", "BRULEARROW", "BRULES", "BRUTEFACTS", "CLOSE", "CLOSEKEY", "COLON", "COMMA", "COMMENT", "CONST", "CONTENT", "CONTEXT", "COUNTSASRULES", "CURLYCLOSE", "CURLYOPEN", "DEL", "DIV", "DOUBLEQUOTE", "DROP", "EFFECTRULES", "EQ", "HAVEGOAL", "IF", "INS", "IN_CONTENT", "IN_CONTEXT", "LESS", "LINE_COMMENT", "LITTEST", "MINUS", "MOD", "MULT", "NAME", "NEWLINE", "NUMBER", "NUMMARKER", "OOPL", "OPEN", "ORULEARROW", "PLUS", "POINT", "QUERY", "RANDOM", "SANCTIONRULES", "SEMI", "SEND", "SHRIEK", "SQCLOSE", "SQOPEN", "STRING", "TELL", "THEN", "TRUE", "VAR", "WS"
    };

    public static final int EOF=-1;
    public static final int ACTIONS=4;
    public static final int ADOPT=5;
    public static final int AND=6;
    public static final int BELIEVE=7;
    public static final int BRULEARROW=8;
    public static final int BRULES=9;
    public static final int BRUTEFACTS=10;
    public static final int CLOSE=11;
    public static final int CLOSEKEY=12;
    public static final int COLON=13;
    public static final int COMMA=14;
    public static final int COMMENT=15;
    public static final int CONST=16;
    public static final int CONTENT=17;
    public static final int CONTEXT=18;
    public static final int COUNTSASRULES=19;
    public static final int CURLYCLOSE=20;
    public static final int CURLYOPEN=21;
    public static final int DEL=22;
    public static final int DIV=23;
    public static final int DOUBLEQUOTE=24;
    public static final int DROP=25;
    public static final int EFFECTRULES=26;
    public static final int EQ=27;
    public static final int HAVEGOAL=28;
    public static final int IF=29;
    public static final int INS=30;
    public static final int IN_CONTENT=31;
    public static final int IN_CONTEXT=32;
    public static final int LESS=33;
    public static final int LINE_COMMENT=34;
    public static final int LITTEST=35;
    public static final int MINUS=36;
    public static final int MOD=37;
    public static final int MULT=38;
    public static final int NAME=39;
    public static final int NEWLINE=40;
    public static final int NUMBER=41;
    public static final int NUMMARKER=42;
    public static final int OOPL=43;
    public static final int OPEN=44;
    public static final int ORULEARROW=45;
    public static final int PLUS=46;
    public static final int POINT=47;
    public static final int QUERY=48;
    public static final int RANDOM=49;
    public static final int SANCTIONRULES=50;
    public static final int SEMI=51;
    public static final int SEND=52;
    public static final int SHRIEK=53;
    public static final int SQCLOSE=54;
    public static final int SQOPEN=55;
    public static final int STRING=56;
    public static final int TELL=57;
    public static final int THEN=58;
    public static final int TRUE=59;
    public static final int VAR=60;
    public static final int WS=61;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public OOPLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public OOPLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return OOPLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g"; }


    	private static HashMap<String,Abstract_VarTerm> variables = new HashMap<String,Abstract_VarTerm>();
    	private String name = "";



    // $ANTLR start "mas"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:64:1: mas returns [Abstract_MAS mas] : org= organisation ;
    public final Abstract_MAS mas() throws RecognitionException {
        Abstract_MAS mas = null;


        Abstract_OOPLAgent org =null;


        try {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:64:32: (org= organisation )
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:64:34: org= organisation
            {
            pushFollow(FOLLOW_organisation_in_mas85);
            org=organisation();

            state._fsp--;


            mas = org.getMAS();

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return mas;
    }
    // $ANTLR end "mas"



    // $ANTLR start "organisation"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:67:1: organisation returns [Abstract_OOPLAgent org] : NAME w= word BRUTEFACTS (l= literal )* EFFECTRULES (er= erule )* COUNTSASRULES (car= carule )* SANCTIONRULES (sr= srule )* ;
    public final Abstract_OOPLAgent organisation() throws RecognitionException {
        Abstract_OOPLAgent org = null;


        String w =null;

        Abstract_Literal l =null;

        Abstract_EffectRule er =null;

        Abstract_CountsAsRule car =null;

        Abstract_SanctionRule sr =null;


        try {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:67:47: ( NAME w= word BRUTEFACTS (l= literal )* EFFECTRULES (er= erule )* COUNTSASRULES (car= carule )* SANCTIONRULES (sr= srule )* )
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:67:49: NAME w= word BRUTEFACTS (l= literal )* EFFECTRULES (er= erule )* COUNTSASRULES (car= carule )* SANCTIONRULES (sr= srule )*
            {
            match(input,NAME,FOLLOW_NAME_in_organisation100); 

            pushFollow(FOLLOW_word_in_organisation104);
            w=word();

            state._fsp--;


            try {org = new Abstract_OOPLAgent(w);} catch (Exception e) {System.err.println(e);}

            match(input,BRUTEFACTS,FOLLOW_BRUTEFACTS_in_organisation112); 

            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:68:15: (l= literal )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==CONST||LA1_0==MINUS||(LA1_0 >= TRUE && LA1_0 <= VAR)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:68:16: l= literal
            	    {
            	    pushFollow(FOLLOW_literal_in_organisation117);
            	    l=literal();

            	    state._fsp--;


            	    org.addInitialBel(l);

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            match(input,EFFECTRULES,FOLLOW_EFFECTRULES_in_organisation126); 

            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:69:16: (er= erule )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==CURLYOPEN) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:69:17: er= erule
            	    {
            	    pushFollow(FOLLOW_erule_in_organisation131);
            	    er=erule();

            	    state._fsp--;


            	    try {org.addEffectRule(er);} catch (Exception e) {System.err.println(e);}

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            match(input,COUNTSASRULES,FOLLOW_COUNTSASRULES_in_organisation141); 

            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:70:18: (car= carule )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==CURLYOPEN) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:70:19: car= carule
            	    {
            	    pushFollow(FOLLOW_carule_in_organisation146);
            	    car=carule();

            	    state._fsp--;


            	    try {org.addCountsAsRule(car);} catch (Exception e) {System.err.println(e);}

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            match(input,SANCTIONRULES,FOLLOW_SANCTIONRULES_in_organisation156); 

            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:71:18: (sr= srule )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==CURLYOPEN) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:71:19: sr= srule
            	    {
            	    pushFollow(FOLLOW_srule_in_organisation161);
            	    sr=srule();

            	    state._fsp--;


            	    try {org.addSanctionRule(sr);} catch (Exception e) {System.err.println(e);}

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return org;
    }
    // $ANTLR end "organisation"



    // $ANTLR start "erule"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:73:1: erule returns [Abstract_EffectRule er] : CURLYOPEN pre= bpre CURLYCLOSE t= pred CURLYOPEN post= bpost CURLYCLOSE ;
    public final Abstract_EffectRule erule() throws RecognitionException {
        Abstract_EffectRule er = null;


        Abstract_Precondition pre =null;

        Abstract_Predicate t =null;

        Abstract_Postcondition post =null;


        try {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:73:40: ( CURLYOPEN pre= bpre CURLYCLOSE t= pred CURLYOPEN post= bpost CURLYCLOSE )
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:73:42: CURLYOPEN pre= bpre CURLYCLOSE t= pred CURLYOPEN post= bpost CURLYCLOSE
            {
            match(input,CURLYOPEN,FOLLOW_CURLYOPEN_in_erule177); 

            pushFollow(FOLLOW_bpre_in_erule181);
            pre=bpre();

            state._fsp--;


            match(input,CURLYCLOSE,FOLLOW_CURLYCLOSE_in_erule183); 

            pushFollow(FOLLOW_pred_in_erule187);
            t=pred();

            state._fsp--;


            match(input,CURLYOPEN,FOLLOW_CURLYOPEN_in_erule189); 

            pushFollow(FOLLOW_bpost_in_erule198);
            post=bpost();

            state._fsp--;


            match(input,CURLYCLOSE,FOLLOW_CURLYCLOSE_in_erule200); 

            Abstract_Literal l = new Abstract_Literal(Abstract_Literal.LPos, 
            						new Abstract_Pred(t)); er = new Abstract_EffectRule(l, 
            						pre, post); variables.clear();

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return er;
    }
    // $ANTLR end "erule"



    // $ANTLR start "carule"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:78:1: carule returns [Abstract_CountsAsRule car] : CURLYOPEN pre= bpre CURLYCLOSE CURLYOPEN pre2= ipre CURLYCLOSE ORULEARROW CURLYOPEN post= ipost CURLYCLOSE ;
    public final Abstract_CountsAsRule carule() throws RecognitionException {
        Abstract_CountsAsRule car = null;


        Abstract_Precondition pre =null;

        Abstract_Precondition pre2 =null;

        Abstract_Postcondition post =null;


        try {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:78:44: ( CURLYOPEN pre= bpre CURLYCLOSE CURLYOPEN pre2= ipre CURLYCLOSE ORULEARROW CURLYOPEN post= ipost CURLYCLOSE )
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:78:46: CURLYOPEN pre= bpre CURLYCLOSE CURLYOPEN pre2= ipre CURLYCLOSE ORULEARROW CURLYOPEN post= ipost CURLYCLOSE
            {
            match(input,CURLYOPEN,FOLLOW_CURLYOPEN_in_carule219); 

            pushFollow(FOLLOW_bpre_in_carule223);
            pre=bpre();

            state._fsp--;


            match(input,CURLYCLOSE,FOLLOW_CURLYCLOSE_in_carule225); 

            match(input,CURLYOPEN,FOLLOW_CURLYOPEN_in_carule236); 

            pushFollow(FOLLOW_ipre_in_carule240);
            pre2=ipre();

            state._fsp--;


            match(input,CURLYCLOSE,FOLLOW_CURLYCLOSE_in_carule242); 

            match(input,ORULEARROW,FOLLOW_ORULEARROW_in_carule244); 

            match(input,CURLYOPEN,FOLLOW_CURLYOPEN_in_carule255); 

            pushFollow(FOLLOW_ipost_in_carule259);
            post=ipost();

            state._fsp--;


            match(input,CURLYCLOSE,FOLLOW_CURLYCLOSE_in_carule261); 

            car = new Abstract_CountsAsRule(pre, pre2, post); variables.clear();

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return car;
    }
    // $ANTLR end "carule"



    // $ANTLR start "srule"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:82:1: srule returns [Abstract_SanctionRule sr] : CURLYOPEN pre= ipre CURLYCLOSE ORULEARROW CURLYOPEN post= bpost CURLYCLOSE ;
    public final Abstract_SanctionRule srule() throws RecognitionException {
        Abstract_SanctionRule sr = null;


        Abstract_Precondition pre =null;

        Abstract_Postcondition post =null;


        try {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:82:42: ( CURLYOPEN pre= ipre CURLYCLOSE ORULEARROW CURLYOPEN post= bpost CURLYCLOSE )
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:82:44: CURLYOPEN pre= ipre CURLYCLOSE ORULEARROW CURLYOPEN post= bpost CURLYCLOSE
            {
            match(input,CURLYOPEN,FOLLOW_CURLYOPEN_in_srule283); 

            pushFollow(FOLLOW_ipre_in_srule287);
            pre=ipre();

            state._fsp--;


            match(input,CURLYCLOSE,FOLLOW_CURLYCLOSE_in_srule289); 

            match(input,ORULEARROW,FOLLOW_ORULEARROW_in_srule291); 

            match(input,CURLYOPEN,FOLLOW_CURLYOPEN_in_srule300); 

            pushFollow(FOLLOW_bpost_in_srule304);
            post=bpost();

            state._fsp--;


            match(input,CURLYCLOSE,FOLLOW_CURLYCLOSE_in_srule306); 

            sr = new Abstract_SanctionRule(pre, post); variables.clear();

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return sr;
    }
    // $ANTLR end "srule"



    // $ANTLR start "ipre"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:86:1: ipre returns [Abstract_Precondition pre] : iprecondition[$pre] ( COMMA iprecondition[$pre] )* ;
    public final Abstract_Precondition ipre() throws RecognitionException {
        Abstract_Precondition pre = null;


        try {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:86:42: ( iprecondition[$pre] ( COMMA iprecondition[$pre] )* )
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:86:44: iprecondition[$pre] ( COMMA iprecondition[$pre] )*
            {
            pre = new Abstract_Precondition("inst");

            pushFollow(FOLLOW_iprecondition_in_ipre330);
            iprecondition(pre);

            state._fsp--;


            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:86:108: ( COMMA iprecondition[$pre] )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:86:109: COMMA iprecondition[$pre]
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_ipre334); 

            	    pushFollow(FOLLOW_iprecondition_in_ipre336);
            	    iprecondition(pre);

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return pre;
    }
    // $ANTLR end "ipre"



    // $ANTLR start "iprecondition"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:87:1: iprecondition[Abstract_Precondition pre] : (i= literal |eq= equation ) ;
    public final void iprecondition(Abstract_Precondition pre) throws RecognitionException {
        Abstract_Literal i =null;

        Abstract_Equation eq =null;


        try {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:87:42: ( (i= literal |eq= equation ) )
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:87:44: (i= literal |eq= equation )
            {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:87:44: (i= literal |eq= equation )
            int alt6=2;
            switch ( input.LA(1) ) {
            case CONST:
            case TRUE:
                {
                alt6=1;
                }
                break;
            case MINUS:
                {
                int LA6_2 = input.LA(2);

                if ( (LA6_2==CONST||LA6_2==VAR) ) {
                    alt6=1;
                }
                else if ( (LA6_2==NUMBER) ) {
                    alt6=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 2, input);

                    throw nvae;

                }
                }
                break;
            case VAR:
                {
                int LA6_3 = input.LA(2);

                if ( (LA6_3==COMMA||LA6_3==CURLYCLOSE) ) {
                    alt6=1;
                }
                else if ( (LA6_3==DIV||LA6_3==EQ||LA6_3==LESS||(LA6_3 >= MINUS && LA6_3 <= MULT)||LA6_3==PLUS) ) {
                    alt6=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 3, input);

                    throw nvae;

                }
                }
                break;
            case NUMBER:
            case OPEN:
                {
                alt6=2;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:87:46: i= literal
                    {
                    pushFollow(FOLLOW_literal_in_iprecondition351);
                    i=literal();

                    state._fsp--;


                    pre.addLiteral(i);

                    }
                    break;
                case 2 :
                    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:88:53: eq= equation
                    {
                    pushFollow(FOLLOW_equation_in_iprecondition413);
                    eq=equation();

                    state._fsp--;


                    pre.addEquation(eq);

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "iprecondition"



    // $ANTLR start "bpre"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:90:1: bpre returns [Abstract_Precondition pre] : bprecondition[$pre] ;
    public final Abstract_Precondition bpre() throws RecognitionException {
        Abstract_Precondition pre = null;


        try {
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:90:42: ( bprecondition[$pre] )
            // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:90:44: bprecondition[$pre]
            {
            pre = new Abstract_Precondition("brute");

            pushFollow(FOLLOW_bprecondition_in_bpre482);
            bprecondition(pre);

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return pre;
    }
    // $ANTLR end "bpre"



    // $ANTLR start "bprecondition"
    // /Users/louiseadennis/Eclipse/ajpf/src/classes/oopl/parser/OOPL.g:91:1: bprecondition[Abstract_Precondition pre] : (b= literal ( COMMA bprecondition[$pre] )* |i= equation ( COMMA bprecondition[$pre] )* ) ;
    public final void bprecondition(Abstract_Precondition pre) throws RecognitionException {
        Abstract_Literal b =null;

        Abstract_Equation i =null;

